# wagtail-unsplash

./: .gitignore  LICENCE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
wagtail_unsplash/: README.md  api.py  forms.py  models.py  paginator.py  settings.py  storage.py  wagtail_hooks.py
wagtail_unsplash/management/commands/: add_unsplash_images.py
wagtail_unsplash/migrations/: 0001_initial.py
wagtail_unsplash/templates/wagtail_unsplash/: results.html  search.html
wagtail_unsplash/views/: admin.py
