[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "wagtail-unsplash"
version = "1.0.1"
description = "Use unsplash.com images in your Wagtail site"
authors = ["Cameron Lamb <jafacakes2011@hotmail.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = ">5.2, <6.1"
python-unsplash = "^1.2.5"
queryish = "^0.2"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
isort = "*"
flake8 = "*"
black = "*"
mypy = "*"
django-stubs = "*"
types-freezegun = "*"
