[metadata]
name = wagtail-unsplash
author = Cameron Lamb
author_email = jafacakes2011@hotmail.co.uk
description = Search for Unsplash images and upload to Wagtail
version = 0.2.0
url = https://github.com/jafacakes2011/wagtail-unsplash
keywords =
  wagtail
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=2.2, <3.1
    wagtail>=2.5, <2.10
    python-unsplash>=1.0.1, <1.1
